apps/web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ports:
    - name: dynamic
      port: 80
      targetPort: 3000
    - name: assets
      port: 81
      targetPort: 3000
  type: NodePort
  selector:
    app: web
